--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-<h1>il mio primo sito web</h1>
-<i><h2>il mio primo sito web</i></h2>
-<u>ilboss</u>
-<i><h3>inter siempre sera el papa de el milan</h3></i>
+<i><h2>  Proporzioni </h2></i>
+<h1></h1>
