--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<i><h2>  Proporzioni </h2></i>
-<h1></h1>
+<u><h2>  Proporzioni </h2></u>
+<h1>Le proporzioni sono relazioni che coinvolgono quattro grandezze,scritte nella  forma a:b=c:d</h1>
