--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <u><h2>  Proporzioni </h2></u>
 <h1>Le proporzioni sono relazioni che coinvolgono quattro grandezze,scritte nella  forma a:b=c:d</h1>
-<img:src="castello">
+<img:src="castello.jpg">
