--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <u><h2>  Proporzioni </h2></u>
-<h1>Le proporzioni sono relazioni che coinvolgono quattro grandezze,scritte nella  forma a:b=c:d</h1>
+<h1>Le proporzioni sono relazioni che coinvolgono quattro grandezze,scritte nella  forma </h1>
+<br>
+<h1>a:b=c:d</h1>
+<br>
 <img:src="castello.jpg">
+<br>
