--- a/index.html
+++ b/index.html
@@ -7,4 +7,13 @@
 <br>
 <ul>
 <li>primo elemento della lista</li>
-</ul>
+  <li>secondo elemento della lista</li>
+  <li>terzo elemento della lista</li>
+  <li>quarto elemento della lista</li>
+  <li>quinto elemento della lista</li>
+ </ul>
+  <ol>
+  <li>sesto elemento della lista</li>
+  <li>settimo elemto della lista</li>
+  <li>ottavo elemento della lista</li>
+  </ol>
