--- a/index.html
+++ b/index.html
@@ -16,4 +16,6 @@
   <li>sesto elemento della lista</li>
   <li>settimo elemto della lista</li>
   <li>ottavo elemento della lista</li>
+    <li>nono elemento della lista</li>
+    <li>decimo elemento della lista</li>
   </ol>
