--- a/index.html
+++ b/index.html
@@ -19,3 +19,8 @@
     <li>nono elemento della lista</li>
     <li>decimo elemento della lista</li>
   </ol>
+  <h1>il castello</h1>
+  <p>benvenuto nel gioco dei bivi. Sei davanti a un castello</p>
+  <img:src="castello.jpg">
+    <p>cosa vuoi fare?</p>
+  <a href="fossato.html">salta il fossato</a>
