--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </ol>
   <h1>il castello</h1>
   <p>benvenuto nel gioco dei bivi. Sei davanti a un castello</p>
-  <img:src="castello.jpg">
+  <img src="castello.jpg">
     <p>cosa vuoi fare?</p>
   <a href="fossato.html">salta il fossato</a>
