--- a/fossato.html
+++ b/fossato.html
@@ -1,3 +1,5 @@
 <h1>il fossato</h1>
 <p>accidenti, sei caduto nel fossato! I coccodrilli ti stanno mordendo il sedere</p>
 <img src="coccodrilli.jpg">
+<p>hai perso.</p>
+<a href="index.html">torna fuori dal castello</a>
