--- a/index.html
+++ b/index.html
@@ -24,3 +24,4 @@
   <img src="castello.jpg">
     <p>cosa vuoi fare?</p>
   <a href="fossato.html">salta il fossato</a>
+  <a href="portone.html">avvicinatevi al portone</a>
