--- a/sfonda.html
+++ b/sfonda.html
@@ -1,5 +1,5 @@
 <h1>Hai sfondato il portone e il re è molto arrabiato</h1>
-<img src="re.jpeg">
+<img src="re.jpg">
 hai 2 opzioni da fare.
 
 <a href="scappo.html">scappare dal castello</a>
