--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li>nono elemento della lista</li>
     <li>decimo elemento della lista</li>
   </ol>
-  <h1>il castello</h1>
+<h1 style="background-color:DodgerBlue;">Il castello</h1>
   <p>benvenuto nel gioco dei bivi. Sei davanti a un castello</p>
   <img src="castello.jpg">
     <p>cosa vuoi fare?</p>
