--- a/bussa.html
+++ b/bussa.html
@@ -5,5 +5,5 @@
   <dr>
     cosa vuoi fare?</dr>
     <a href="re.html">vedere il re</a>
-    <a href="uscire.html">andare via</a>
+    <a href="index.html">andare via</a>
     
