--- a/index.html
+++ b/index.html
@@ -26,3 +26,6 @@
   <a href="fossato.html">salta il fossato</a>
   <br>
   <a href="portone.html">avvicinatevi al portone</a>
+
+
+<a href="tabella.html"> entraaaaa</a>
