--- a/tabella.html
+++ b/tabella.html
@@ -1,7 +1,7 @@
 <table>
 <tr>
- <td>valore riga 1, colonna1</td>
-<td>valore riga 1, colonna2</td>
+<tr> <td>valore riga 1, colonna1</td></tr>
+<tr><td>valore riga 1, colonna2</td></tr>
 
   
 </tr>
