--- a/tabella.html
+++ b/tabella.html
@@ -1,11 +1,11 @@
 <table>
 <tr>
-<tr><td>valore riga 1, colonna1</td></tr>
-<tr><td>valore riga 1, colonna2</td></tr>
-<tr><td>valore riga 2, colonna1</td></tr>
-<tr><td>valore riga 2, colonna2</td></tr>
-<tr><td>valore riga 3, colonna1</td></tr>
-<tr><td>valore riga 3, colonna2</td></tr>
+<tr><td> colonna1, colonna2, colonna3, colonna4, colonna5</td></tr>
+<tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
+<tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
+<tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
+<tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
+<tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
 
   
 </tr>
