--- a/tabella.html
+++ b/tabella.html
@@ -7,6 +7,14 @@
 <tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
 <tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
 
+
+  <table>
+<tr><td>Colonna 1</td><td>Colonna 2</td></tr>
+<tr><td>Dato 1,1</td><td>Dato 1,2</td></tr>
+<tr><td>Dato 2,1</td><td>Dato 2,2</td></tr>
+<tr><td>Dato 3,1</td><td>Dato 3,2</td></tr>
+</table>
+
   
 </tr>
 
