--- a/tabella.html
+++ b/tabella.html
@@ -7,7 +7,8 @@
 <tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
 <tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
 
-
+<font color="blue">colonna1</font>
+<br/>
 
 
   
