--- a/tabella.html
+++ b/tabella.html
@@ -7,8 +7,10 @@
 <tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
 <tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
 
-<font color="blue">colonna1</font>
-<br/>
+<table>
+  <tr><td><font color="red">rosso</font>,<font color="orange">arancione</font>,<font color="yellow">giallo</font>,<font color="green">verde</font></td></tr>
+  
+
 
 
   
