--- a/tabella.html
+++ b/tabella.html
@@ -8,7 +8,8 @@
 <tr><td>valore riga 1, valore riga 2, valore riga 3, valore riga 4</td></tr>
 
 <table>
-  <tr><td><font color="red">rosso</font>,<font color="orange">arancione</font>,<font color="yellow">giallo</font>,<font color="green">verde</font></td></tr>
+  <tr><td><font color="red">rosso</font>  <font color="orange">arancione</font>  <font color="yellow">giallo</font>  <font color="green">verde</font></td></tr>
+  <tr><td><font color="lite blue">azzurro</font>  <font color="red">rosso</font>  <font color="red">rosso</font>  <font color="red">rosso</font></td></tr>
   
 
 
