--- a/css.html
+++ b/css.html
@@ -5,7 +5,7 @@
 <p class"p5">holaaaaaaaaaaa</p>
 <style>
 
-.p1<font-size:12xp
+<h1 style="border:2px solid tomato;">holaaaaaaaaa</h1>
 
   
 </style>
