--- a/css.html
+++ b/css.html
@@ -4,8 +4,22 @@
 <p class"p4">holaaaaaaaaaaa</p>
 <p class"p5">holaaaaaaaaaaa</p>
 <style>
-
-<h1 style="border:200px solid tomato;">holaaaaaaaaa</h1>
-
+.color{
+  color:red;
+  
+}
+  .font-size{
+    fontsize: 64px;
+  }
+  .font-family{
+    font-family:serif;
+  }
+  .font-style{
+    font-style:fantasy;
+  }
   
 </style>
+    
+  
+  
+  
