--- a/css.html
+++ b/css.html
@@ -7,10 +7,9 @@
 <style>
 .p1{
   color:red;
-  
 }
   .p2{
-    fontsize: 64px;
+    font-size: 64px;
   }
   .p3{
     font-family:serif;
@@ -18,7 +17,6 @@
   .p4{
     font-style:fantasy;
   }
-  
 </style>
     
   
