--- a/Poesia.html
+++ b/Poesia.html
@@ -1,10 +1,18 @@
 <p class="p1">Ode ai CSS</p>
+<p class="p2">Con il</p> <p class="p3">color</p><p class="p4">dipingi emozioni,</p>
+
+
+
+
+
+
 
 <style>
 .p1{
-  font-size: 20px
+  font-size:20px
   color:emerald;
 }
+  
 </style>
 
 
