--- a/Poesia.html
+++ b/Poesia.html
@@ -1,5 +1,5 @@
 <p class="p1">Ode ai CSS</p>
-<p class="p2">Con il</p> <p class="p3">color</p><p class="p4">dipingi emozioni,</p>
+class="p2">Con il class="p3">color <p class="p4">dipingi emozioni,</p>
 
 
 
@@ -9,13 +9,14 @@
 
 <style>
 .p1{
-  font-size:20px
+  font-size:20px;
   color:emerald;
+  font-family:sans-serif;
 }
+  .p2{
+    font-
   
 </style>
-
-
 
 
 
