--- a/Poesia.html
+++ b/Poesia.html
@@ -1,5 +1,5 @@
 <p class="p1">Ode ai CSS</p>
-class="p2">Con il class="p3">color <p class="p4">dipingi emozioni,</p>
+<b class="p2">Con il</b><b class="p3">color</b> <b class="p4">dipingi emozioni,</b>
 
 
 
@@ -9,7 +9,7 @@ class="p2">Con il class="p3">color <p class="p4">dipingi emozioni,</p>
 
 <style>
 .p1{
-  font-size:20px;
+  font-size: 70px;
   color:emerald;
   font-family:sans-serif;
 }
