--- a/Poesia.html
+++ b/Poesia.html
@@ -1,10 +1,15 @@
 <p class="p1">Ode ai CSS</p>
 <b class="p2">Con il</b><b class="p3">color</b> <b class="p4">dipingi emozioni,</b>
-<p class="p5">con il</p><b class="p6">font-size</b> <b class="p7">crei dimensioni.</b>
-<p class="p8">Il</p><b class="p9">font-family</b> <b class="p10">racconta lo stile,</b>
-<p class="p11">e con il</p><b class="p12">font-style</b> <b class="p13">tutto è più sottile.</b>
-<p class="p14">infine il</p><b class="p15">font-weight</b> <b class="p16">dà peso e spessore,</b>
-<p class="p17">ai testi che vibrano nel nostro cuore</p>
+<br>
+<b class="p5">con il</b><b class="p6">font-size</b> <b class="p7">crei dimensioni.</b>
+<br>
+<b class="p8">Il</b><b class="p9">font-family</b> <b class="p10">racconta lo stile,</b>
+<br>
+<b class="p11">e con il</b><b class="p12">font-style</b> <b class="p13">tutto è più sottile.</b>
+<br>
+<b class="p14">infine il</b><b class="p15">font-weight</b> <b class="p16">dà peso e spessore,</b>
+<br>
+<b class="p17">ai testi che vibrano nel nostro cuore</b>
 
 
 
@@ -15,7 +20,7 @@
 <style>
 .p1{
   font-size: 70px;
-  color:emerald;
+  color:#008060;
   font-family:sans-serif;
 }
   .p2{
