--- a/Poesia.html
+++ b/Poesia.html
@@ -13,10 +13,6 @@
 
 
 
-
-
-
-
 <style>
 .p1{
   font-size: 70px;
@@ -24,7 +20,77 @@
   font-family:sans-serif;
 }
   .p2{
-    font-
+font-size: 40px;
+  color:cc0000;
+  font-family:cursive;
+
+  .p3{
+  font-size: 40px;
+  color:#cc6600;
+  font-family:cursive;
+}
+    .p4{
+font-size: 40px;
+  color:cc0000;
+  font-family:cursive;
+      .p5{
+  font-size: 40px;
+  color:#cc6600;
+  font-family:cursive;
+        .p6{
+font-size: 40px;
+  color:cc0000;
+  font-family:cursive;
+           .p7{
+  font-size: 40px;
+  color:#cc6600;
+  font-family:cursive;
+             .p8{
+font-size: 40px;
+  color:cc0000;
+  font-family:cursive;
+                .p9{
+  font-size: 40px;
+  color:#cc6600;
+  font-family:cursive;
+                  .p10{
+font-size: 40px;
+  color:cc0000;
+  font-family:cursive;
+                    .p11{
+  font-size: 40px;
+  color:#cc6600;
+  font-family:cursive;
+
+                    .p12{
+font-size: 40px;
+  color:cc0000;
+  font-family:cursive;
+                      .p13{
+  font-size: 40px;
+  color:#cc6600;
+  font-family:cursive;
+                        
+  .p14{
+font-size: 40px;
+  color:cc0000;
+  font-family:cursive;
+     .p15{
+  font-size: 40px;
+  color:#cc6600;
+  font-family:cursive;
+        .p16{
+font-size: 40px;
+  color:cc0000;
+  font-family:cursive;
+          .p17{
+font-size: 40px;
+  color:cc0000;
+  font-family:cursive;
+                  
+
+
+
   
 </style>
 
