--- a/Poesia.html
+++ b/Poesia.html
@@ -21,7 +21,7 @@
 }
   .p2{
 font-size: 40px;
-  color:cc0000;
+  color:#cc0000;
   font-family:cursive;
 
   .p3{
@@ -31,7 +31,7 @@ font-size: 40px;
 }
     .p4{
 font-size: 40px;
-  color:cc0000;
+  color:#cc0000;
   font-family:cursive;
       .p5{
   font-size: 40px;
@@ -40,7 +40,7 @@ font-size: 40px;
         }
         .p6{
 font-size: 40px;
-  color:cc0000;
+  color:#cc0000;
   font-family:cursive;
           }
            .p7{
@@ -50,7 +50,7 @@ font-size: 40px;
              }
              .p8{
 font-size: 40px;
-  color:cc0000;
+  color:#cc0000;
   font-family:cursive;
                }
                 .p9{
@@ -60,7 +60,7 @@ font-size: 40px;
                   }
                   .p10{
 font-size: 40px;
-  color:cc0000;
+  color:#cc0000;
   font-family:cursive;
                     }
                     .p11{
@@ -71,7 +71,7 @@ font-size: 40px;
 
                     .p12{
 font-size: 40px;
-  color:cc0000;
+  color:#cc0000;
   font-family:cursive;
                       }
                       .p13{
@@ -82,7 +82,7 @@ font-size: 40px;
                         
   .p14{
 font-size: 40px;
-  color:cc0000;
+  color:#cc0000;
   font-family:cursive;
     }
      .p15{
@@ -92,12 +92,12 @@ font-size: 40px;
        }
         .p16{
 font-size: 40px;
-  color:cc0000;
+  color:#cc0000;
   font-family:cursive;
           }
           .p17{
 font-size: 40px;
-  color:cc0000;
+  color:#cc0000;
   font-family:cursive;
             }
                   
