--- a/Zengarden.html
+++ b/Zengarden.html
@@ -6,9 +6,11 @@
 
 <style>
 .h1{
-font-size: 70px;
   color:#008060;
   font-family:sans-serif;
 }
-  
+  .h2{
+  color:#006600;
+  font-family:sans-serif
+ } 
 </style>
