--- a/Zengarden.html
+++ b/Zengarden.html
@@ -14,7 +14,9 @@ h1{
   font-family:sans-serif
  } 
   p{
-  color:#53ff1a
+  color:#47d147
     font-family:fantasy
-     } 
+    
+     }
+  
 </style>
