--- a/Zengarden.html
+++ b/Zengarden.html
@@ -16,7 +16,9 @@ h1{
   p{
   color:#47d147;
     font-family:fantasy
-    
-     }
+    }
+  h3{
+    color:#00e673;
+    font-family:cursive}
   
 </style>
